--- a/highScore.html
+++ b/highScore.html
@@ -21,9 +21,11 @@
     </div>
     <div class="footer">
         <div id="footer-body" class="flex-center flex-column">
-            <p>PUKKA WEB SERVICES &copy; <span id="year">                <script>
+            <p>PUKKA WEB SERVICES &copy; <span id="year"> 
+                <!-- <script>
                     document.write(new Date().getFullYear());
-                </script></span></p>
+                </script> -->
+            </span></p>
         
             <a href="http://qbentil.netlify.app">Bentil {Codes}</a>
         </div>
