Handle Quiz Review and Files restructiure

--- a/end.html
+++ b/end.html
@@ -19,6 +19,7 @@
                 <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled title="Enter name first">Save</button>
             </form>
             <!-- <a href="view.html" class="btn">View Answers</a> -->
+            <a href="review.html" class="btn">Review Quiz</a>
             <a href="game.html" class="btn">Play Again</a>
             <a href="select.html" class="btn">Select New Quiz</a>
             <a href="index.html" class="btn">Go Home</a>
@@ -26,11 +27,9 @@
     </div>
     <div class="footer">
         <div id="footer-body" class="flex-center flex-column">
-            <p>PUKKA WEB SERVICES &copy; <span id="year">
-                <!-- <script>
+            <p>PUKKA TECHNOLOGIES &copy; <span id="year">                <script>
                     document.write(new Date().getFullYear());
-                </script> -->
-            </span></p>
+                </script></span></p>
         
             <a href="http://qbentil.netlify.app">Bentil {Codes}</a>
         </div>
