--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </a>
                 <small id="welcome">Welcome To</small>
             </div>
-            <h1><span class="code">{</span>CoDERS <span class="code">}</span>  Quiz </h1>
+            <h1 class="text-center"><span class="code">{</span>CoDERS <span class="code">}</span>  Quiz </h1>
             <a href="select.html" class="btn">Start A Quiz</a>
             <a href="highscore.html" class="btn">High Scores</a>
             <div class="flext-center flex-column">
@@ -29,16 +29,11 @@
     </div>
     <div class="footer">
         <div id="footer-body" class="flex-center flex-column">
-            <p>PUKKA WEB SERVICES &copy; <span id="year">
-<!--                 <script>
+            <p>PUKKA TECHNOLOGIES &copy; <span id="year">                <script>
                     document.write(new Date().getFullYear());
-                </script> 
-Writing to Document is apparently deprecated and a bad practice
--->
-                
-             </span></p>
+                </script></span></p>
         
-            <a href="http://qbentil.netlify.app">Bentil {Codes}</a>
+            <a href="http://qbentil.netlify.app" target="_blank">{Codes with} Bentil </a>
         </div>
     </div>
 
