--- a/select.html
+++ b/select.html
@@ -30,7 +30,7 @@
     </div>
     <div class="footer">
         <div id="footer-body" class="flex-center flex-column">
-            <p>PUKKA WEB SERVICES&copy; <span id="year">
+            <p>PUKKA TECHNOLOGIES&copy; <span id="year">
                 <script>
                     document.write(new Date().getFullYear());
                 </script>
