--- a/game.html
+++ b/game.html
@@ -50,11 +50,9 @@
     </div>
     <div class="footer">
         <div id="footer-body" class="flex-center flex-column">
-            <p>PUKKA WEB SERVICES &copy; <span id="year">
-<!--                 <script>
+            <p>PUKKA TECHNOLOGIES &copy; <span id="year">                <script>
                     document.write(new Date().getFullYear());
-                </script> -->
-                </span></p>
+                </script></span></p>
         
             <a href="http://qbentil.netlify.app">Bentil {Codes}</a>
         </div>
