--- a/highScore.html
+++ b/highScore.html
@@ -14,18 +14,16 @@
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finaleScores">High Scores</h1>
             <ul id="highScoresList">
-
+                
             </ul>
             <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
     <div class="footer">
         <div id="footer-body" class="flex-center flex-column">
-            <p>PUKKA WEB SERVICES &copy; <span id="year"> 
-                <!-- <script>
+            <p>PUKKA TECHNOLOGIES &copy; <span id="year">                <script>
                     document.write(new Date().getFullYear());
-                </script> -->
-            </span></p>
+                </script></span></p>
         
             <a href="http://qbentil.netlify.app">Bentil {Codes}</a>
         </div>
