--- a/view.html
+++ b/view.html
@@ -46,13 +46,9 @@
     </div>
     <div class="footer">
         <div id="footer-body" class="flex-center flex-column">
-            <p>PUKKA WEB SERVICES &copy; <span id="year">
-<!--                 <script>
+            <p>PUKKA TECHNOLOGIES &copy; <span id="year">                <script>
                     document.write(new Date().getFullYear());
-                </script> 
-Writing to Document is apparently deprecated and a bad practice
--->
-              </span></p>
+                </script></span></p>
         
             <a href="http://qbentil.netlify.app">Bentil {Codes}</a>
         </div>
